d1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: d1
  name: d1
spec:
  replicas: 1
  selector:
    matchLabels:
      run: d1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: d1
    spec:
      containers:
      - image: nginx
        name: d1
        resources: {}
status: {}
