d1.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: d1
  name: d1
spec:
  containers:
  - image: nginx
    name: d1
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
