test-kube.yml
apiVersion: v1
kind: Pod
metadata:
  name: math-pod
spec:
  containers:
  - image: ubuntu
    name: math-pod 
    command: ['expr', '3', '+', '2']
