lb-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
  creationTimestamp: "2019-06-23T04:54:43Z"
  labels:
    app: hello
  name: helloweb2
  namespace: app-space
  resourceVersion: "9465977"
  selfLink: /api/v1/namespaces/app-space/services/helloweb1
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello
    tier: web
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer:
    ingress:
